--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
 	],
 	"dependencies": {
 		"csv-parse": "^2.0.0",
-		"get-stream": "^3.0.0"
+		"get-stream": "^3.0.0",
+		"parseboolean": "^1.0.0"
 	},
 	"devDependencies": {
 		"csvlint": "^0.2.2",
+		"lodash.isboolean": "^3.0.3",
 		"lodash.isnumber": "^3.0.3",
 		"lodash.isstring": "^4.0.1",
 		"tape": "^4.8.0"
