--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"germany",
 		"rail"
 	],
-	"author": "Julius Tens <mail@juliustens.de>",
+	"author": "Julius Tens <mail@juliustens.eu>",
 	"homepage": "https://github.com/juliuste/vbb-change-positions",
 	"repository": "juliuste/vbb-change-positions",
 	"bugs": "https://github.com/juliuste/vbb-change-positions/issues",
