--- a/package.json
+++ b/package.json
@@ -25,18 +25,18 @@
 	"main": "./index.js",
 	"files": [
 		"index.js",
-		"data.csv"
+		"data.ndjson"
 	],
 	"dependencies": {
-		"csv-parse": "^2.0.0",
 		"get-stream": "^3.0.0",
-		"parseboolean": "^1.0.0"
+		"ndjson": "^1.5.0"
 	},
 	"devDependencies": {
-		"csv-parser": "^1.12.0",
+		"lodash.isarray": "^4.0.0",
 		"lodash.isboolean": "^3.0.3",
 		"lodash.isnumber": "^3.0.3",
 		"lodash.isstring": "^4.0.1",
+		"ndjson": "^1.5.0",
 		"tape": "^4.8.0",
 		"tape-promise": "^2.0.1",
 		"vbb-stations": "^6.0.0"
