--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"ndjson": "^1.5.0"
 	},
 	"devDependencies": {
+		"is-stream": "^1.1.0",
 		"lodash.isarray": "^4.0.0",
 		"lodash.isboolean": "^3.0.3",
 		"lodash.isnumber": "^3.0.3",
@@ -39,7 +40,6 @@
 		"lodash.isstring": "^4.0.1",
 		"ndjson": "^1.5.0",
 		"tape": "^4.8.0",
-		"tape-promise": "^2.0.1",
 		"vbb-lines-at": "^3.10.0",
 		"vbb-stations": "^6.0.0"
 	},
