--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@ Thumbs.db
 .nvm-version
 node_modules
 npm-debug.log
-dist
 
-yarn.lock
-shrinkwrap.yaml
+/yarn.lock
+/shrinkwrap.yaml
+/package-lock.json
 
 /data.json
