--- a/package.json
+++ b/package.json
@@ -1,22 +1,15 @@
 {
 	"name": "vbb-change-positions",
 	"description": "Station-specific platform positions for changes between vbb main lines.",
-	"version": "1.2.0",
+	"version": "1.2.1",
 	"keywords": [
 		"vbb",
 		"berlin",
 		"brandenburg",
 		"verkehrsverbund",
-		"public",
-		"transport",
+		"public transport",
 		"change",
-		"nahverkehr",
-		"ubahn",
-		"sbahn",
-		"metro",
-		"train",
-		"germany",
-		"rail"
+		"transfer"
 	],
 	"author": "Julius Tens <mail@juliustens.eu>",
 	"homepage": "https://github.com/juliuste/vbb-change-positions",
@@ -50,7 +43,7 @@
 	"scripts": {
 		"build": "node build.js >data.json",
 		"test": "node test.js",
-		"prepare": "npm run build && npm test"
+		"prepublishOnly": "npm run build && npm test"
 	},
 	"engines": {
 		"node": ">=8"
