--- a/package.json
+++ b/package.json
@@ -30,11 +30,7 @@
 	"devDependencies": {
 		"get-stream": "^4.1.0",
 		"is-stream": "^1.1.0",
-		"lodash.isarray": "^4.0.0",
-		"lodash.isboolean": "^3.0.3",
-		"lodash.isnumber": "^3.0.3",
-		"lodash.isobject": "^3.0.2",
-		"lodash.isstring": "^4.0.1",
+		"lodash": "^4.17.21",
 		"ndjson": "^1.5.0",
 		"tape": "^4.8.0",
 		"vbb-lines-at": "^4.2.1",
