--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: test
+name: lint & test
 
 on:
   push:
@@ -24,4 +24,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
 
+    - run: npm run lint
     - run: npm test
