--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"get-stream": "^6.0.1",
 		"is-stream": "^2.0.1",
 		"lodash": "^4.17.21",
+		"tap-min": "^2.0.0",
 		"tape": "^5.6.1",
 		"vbb-lines-at": "^5.3.0",
 		"vbb-stations": "^8.3.1"
@@ -39,7 +40,7 @@
 	"scripts": {
 		"lint": "eslint .",
 		"build": "node build.js >data.json",
-		"test": "node test.js",
+		"test": "node test.js | tap-min",
 		"prepublishOnly": "npm run lint && npm run build && npm test"
 	},
 	"engines": {
